# Module_2.55

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt  wrapper.sh
.github/workflows/: test.yml
src/module2_55/: main.py
tests/: test_basic.py
